<resources>
    <string name="app_name">DevMobile</string>


    <!---->
    <string name="content_description">resource</string>

    <!--Login Activity-->
    <string name="welcome">¡Bienvenido!</string>
    <string name="welcome_peach">Nos encanta tenerte aquí, inicia sesión para continuar</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>

    <string name="insert_name">Ingresa tu nombre</string>
    <string name="insert_valid_username">Ingrese nombre de usuario válido</string>

    <string name="insert_password">Ingresa tu contraseña</string>
    <string name="insert_valid_password">Ingrese contraseña válida</string>
    <string name="insert_valid_password_lenght">Ingrese contraseña de al menos 8 dígitos</string>

    <string name="sign_in">Entrar</string>

    <!--Upload Activity-->
    <string name="upload_title">Previsualizador de carga</string>
    <string name="upload_peach">Pega o escribe la URL de la imagen que deseas cargar</string>
    <string name="url">URL de la imagen</string>

    <string name="insert_url">Inserta o digita la URL</string>
    <string name="insert_valid_url">Ingrese una URL válida</string>

    <string name="load_url">Cargar Imagen</string>

    <!--Gallery Activity-->
    <string name="gallery_title">Galería de Imágenes</string>
<!--    <string name="upload_peach">Pega o escribe la URL de la imagen que deseas cargar</string>-->
<!--    <string name="url">URL de la imagen</string>-->

<!--    <string name="insert_url">Inserta o digita la URL</string>-->
<!--    <string name="insert_valid_url">Ingrese una URL válida</string>-->

<!--    <string name="load_url">Cargar Imagen</string>-->

</resources>